{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 23,
  "lineage": "387a1e24-4ec3-3700-f742-7ab8dc67c964",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databricks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:security-group/sg-076f0ecbb675507f5",
            "description": "Security group for Databricks workspace",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076f0ecbb675507f5",
            "ingress": [],
            "name": "abel-test-sg",
            "name_prefix": "",
            "owner_id": "904233133154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e0d781fb3a2b6e1",
            "domain": "vpc",
            "id": "eipalloc-08e0d781fb3a2b6e1",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-201-177-155.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.177.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "abel-test-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "abel-test-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:internet-gateway/igw-0c2e0e7390dadd9bb",
            "id": "igw-0c2e0e7390dadd9bb",
            "owner_id": "904233133154",
            "tags": {
              "Name": "abel-test-vpc"
            },
            "tags_all": {
              "Name": "abel-test-vpc"
            },
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2e0e7390dadd9bb",
            "id": "r-rtb-0f301d5d074716ff51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f301d5d074716ff5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:route-table/rtb-02e52bca864d37c38",
            "id": "rtb-02e52bca864d37c38",
            "owner_id": "904233133154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abel-test-vpc-private"
            },
            "tags_all": {
              "Name": "abel-test-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:route-table/rtb-0f301d5d074716ff5",
            "id": "rtb-0f301d5d074716ff5",
            "owner_id": "904233133154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abel-test-vpc-public"
            },
            "tags_all": {
              "Name": "abel-test-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020d48523067beba2",
            "route_table_id": "rtb-02e52bca864d37c38",
            "subnet_id": "subnet-0094aeb8ea8033a48"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc55232aca0e096d",
            "route_table_id": "rtb-02e52bca864d37c38",
            "subnet_id": "subnet-04a2be8ffe1633c3d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e27e8f93ac1aafa",
            "route_table_id": "rtb-0f301d5d074716ff5",
            "subnet_id": "subnet-0a1da0f538660dd45"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014d7a4bd688f767a",
            "route_table_id": "rtb-0f301d5d074716ff5",
            "subnet_id": "subnet-04b60b75288f0d718"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:subnet/subnet-0094aeb8ea8033a48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094aeb8ea8033a48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233133154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abel-test-vpc-private-us-west-2a"
            },
            "tags_all": {
              "Name": "abel-test-vpc-private-us-west-2a"
            },
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:subnet/subnet-04a2be8ffe1633c3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a2be8ffe1633c3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233133154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abel-test-vpc-private-us-west-2b"
            },
            "tags_all": {
              "Name": "abel-test-vpc-private-us-west-2b"
            },
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:subnet/subnet-0a1da0f538660dd45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1da0f538660dd45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233133154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abel-test-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "abel-test-vpc-public-us-west-2a"
            },
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:subnet/subnet-04b60b75288f0d718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b60b75288f0d718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233133154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abel-test-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "abel-test-vpc-public-us-west-2b"
            },
            "vpc_id": "vpc-00952d81538ac1993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:904233133154:vpc/vpc-00952d81538ac1993",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086157504ad5d1b81",
            "default_route_table_id": "rtb-0df106f2047c549e4",
            "default_security_group_id": "sg-083d4d8f08bc8074e",
            "dhcp_options_id": "dopt-0548cf497a9a24b9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00952d81538ac1993",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df106f2047c549e4",
            "owner_id": "904233133154",
            "tags": {
              "Name": "abel-test-vpc"
            },
            "tags_all": {
              "Name": "abel-test-vpc"
            }
          }
        }
      ]
    }
  ]
}